fixed readability

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -67,12 +67,12 @@ a.user {
 
 .badge-text {
   line-height: 0.5rem;
-  font-size: var(--fs-xs);
+  font-size: 0.8rem;
 }
 
 .badge-md {
-  width: 1.1rem;
-  height: 1.1rem;
+  width: 1.2rem;
+  height: 1.2rem;
 }
 
 .cart {
